--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ru.spiritblog.photogallery2">
 
+
+    <permission
+        android:name="ru.spiritblog.photogallery2.PRIVATE"
+        android:protectionLevel="signature" />
+
+
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="ru.spiritblog.photogallery2.PRIVATE" />
 
     <application
         android:name=".PhotoGalleryApplication"
@@ -19,6 +26,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver
+            android:name=".NotificationReceiver"
+            android:exported="false"
+            android:permission="ru.spiritblog.photogallery2.PRIVATE">
+            <intent-filter android:priority="-999">
+                <action android:name="ru.spiritblog.photogallery2.SHOW_NOTIFICATION" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
